--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "http://maxmchu.github.io",
   "private": true,
   "dependencies": {
+    "@types/react-youtube": "^7.6.2",
     "gh-pages": "^2.0.1",
     "node-sass": "^4.11.0",
     "react": "^16.8.3",
@@ -11,6 +12,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.0.0",
+    "react-youtube": "^7.9.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.85.0"
   },
